--- a/client/src/main/resources/views/ChatView.fxml
+++ b/client/src/main/resources/views/ChatView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Point3D?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -67,11 +68,11 @@
                <children>
                   <TabPane fx:id="leftPane" prefHeight="540.0" prefWidth="292.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
-                      <Tab fx:id="recentMessageTab" text="recent message"  onSelectionChanged="#recentMessageClicked" >
+                      <Tab fx:id="recentMessageTab" onSelectionChanged="#recentMessageClicked" text="recent message">
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <ListView fx:id="messageList" focusTraversable="false" maxHeight="1.7976931348623157E308" prefHeight="511.0" prefWidth="294.0" style="-fx-border-image-width: 0;" stylesheets="@../styles/ListViewStyle.css" />
+                                    <ListView fx:id="messageList" focusTraversable="false" maxHeight="1.7976931348623157E308" onMouseClicked="#changeToConservation" prefHeight="511.0" prefWidth="294.0" style="-fx-border-image-width: 0;" stylesheets="@../styles/ListViewStyle.css" />
                                  </children></AnchorPane>
                         </content>
                       </Tab>
@@ -100,7 +101,7 @@
                                                 <Insets bottom="10.0" />
                                              </opaqueInsets>
                                           </Label>
-                                          <Label fx:id="onlineCountLabel" prefHeight="47.0" prefWidth="86.0" text="0" textFill="#fc6747">
+                                          <Label fx:id="onlineCountLabel" prefHeight="50.0" prefWidth="72.0" text="0" textFill="#fc6747">
                                              <opaqueInsets>
                                                 <Insets />
                                              </opaqueInsets>
@@ -108,9 +109,26 @@
                                                 <Font name="SansSerif Regular" size="14.0" />
                                              </font>
                                           </Label>
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="47.0" prefWidth="138.0">
+                                             <children>
+                                                <Label prefHeight="16.0" prefWidth="97.0" text="Create Group" textFill="#fc6747">
+                                                   <font>
+                                                      <Font name="SansSerif Regular" size="14.0" />
+                                                   </font>
+                                                </Label>
+                                                <ImageView fx:id="MultiConservation" onMouseClicked="#createGroupConservationClicked" fitHeight="25.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../images/plus.png" />
+                                                   </image>
+                                                   <viewport>
+                                                      <Rectangle2D />
+                                                   </viewport>
+                                                </ImageView>
+                                             </children>
+                                          </HBox>
                                        </children>
                                     </HBox>
-                                    <ListView fx:id="userList" focusTraversable="false" layoutY="49.0" maxHeight="1.7976931348623157E308" onMouseClicked="#createSingleConversation" prefHeight="463.0" prefWidth="293.0" style="-fx-border-image-width: 0;" stylesheets="@../styles/ListViewStyle.css">
+                                    <ListView fx:id="userList" focusTraversable="false" layoutY="49.0" maxHeight="1.7976931348623157E308" onMouseClicked="#startSingleConversation" prefHeight="463.0" prefWidth="293.0" style="-fx-border-image-width: 0;" stylesheets="@../styles/ListViewStyle.css">
             </ListView>
                                  </children>
                               </AnchorPane>
